Update stackpanel