@@ -1,8 +1,6 @@
 package org.example.javafxtutorial;
 
 import controller.BookUserView;
-import java.io.IOException;
-import java.util.List;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.geometry.Insets;
@@ -10,21 +8,24 @@ import javafx.scene.Node;
 import javafx.scene.control.TextField;
 import javafx.scene.layout.AnchorPane;
 import javafx.scene.layout.GridPane;
+import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
 import logic.Book;
+
+import java.io.IOException;
+import java.util.List;
 
 public class BrowseViewController {
 
   private LibraryService libraryService;
-
-  private AnchorPane mainView;
 
   @FXML
   private TextField searchField;
 
   @FXML
   private GridPane bookGridPane;
-  private List<Book> allBooks;
+
+  private StackPane mainView;
 
   public TextField getSearchField() {
     return searchField;
@@ -45,7 +46,7 @@ public class BrowseViewController {
             getClass().getResource("/org/example/javafxtutorial/book-card.fxml"));
         VBox bookCard = cardLoader.load();
         BookCardController bookCardController = cardLoader.getController();
-        bookCardController.setBook(book,this);
+        bookCardController.setBook(book, this);
 
         if (col == 5) {
           col = 0;
@@ -53,21 +54,19 @@ public class BrowseViewController {
         }
 
         bookGridPane.add(bookCard, col++, row);
-        GridPane.setMargin(bookCard,new Insets(10));
+        GridPane.setMargin(bookCard, new Insets(10));
       }
     } catch (IOException e) {
       e.printStackTrace();
     }
   }
 
-  public void launchBookView(Book book){
-    try{
-      FXMLLoader loader = new FXMLLoader(getClass().getResource(
-          "/org/example/javafxtutorial/BookUserview.fxml"));
-
+  public void launchBookView(Book book) {
+    try {
+      FXMLLoader loader = new FXMLLoader(getClass().getResource("/org/example/javafxtutorial/BookUserview.fxml"));
       Node content = loader.load();
       BookUserView bookUserView = loader.getController();
-      bookUserView.setMainView(mainView, mainView.getChildren().getFirst());
+      bookUserView.setMainView(mainView, mainView.getChildren().get(0));
       bookUserView.setRefreshLibraryViewCallback(v -> {
         try {
           initializeBrowseView();
@@ -75,19 +74,19 @@ public class BrowseViewController {
           throw new RuntimeException(e);
         }
       });
-      mainView.getChildren().setAll(content);
+      mainView.getChildren().add(content);
       bookUserView.initializeBookViewForUser(book);
       bookUserView.setLibraryService(libraryService);
-    } catch(IOException e){
+    } catch (IOException e) {
       e.printStackTrace();
     }
   }
 
-  public void setLibraryService(LibraryService libraryService){
+  public void setLibraryService(LibraryService libraryService) {
     this.libraryService = libraryService;
   }
 
-  public void setMainView(AnchorPane mainView) {
+  public void setMainView(StackPane mainView) {
     this.mainView = mainView;
   }
 }
